--- a/mypage/mypage.html
+++ b/mypage/mypage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="./mypage.css" />
     <script src="../js/main.js"></script>
     <title>여행발자국</title>
   </head>
@@ -33,9 +34,9 @@
     <article id="my_container">
       <!-- 마이패이지 화면 -->
       <section id="my_box">
-        <div id="my_title"><h1>마이페이지</h1></div>
+        <div id="my_title"><h2>마이페이지</h2></div>
         <div id="my_content">
-          <div id="my_side"></div>
+          <div id="my_side">이미지 닉네임 로그아웃버튼</div>
           <div id="my_body">
             <div id="my_setting">
               <h2>기본설정</h2>
